// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full scan snapshots > hono-basic map snapshot 1`] = `
{
  "cliVersion": "[REDACTED]",
  "framework": "hono",
  "generatedAt": "[REDACTED]",
  "projectName": "hono-basic-fixture",
  "routes": [
    {
      "checks": {
        "audit": {
          "status": "pass",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "src/checkout.ts",
      "framework": "hono",
      "handler": {
        "column": 0,
        "line": 6,
      },
      "id": "ec65818b4193",
      "kind": "api",
      "method": "POST",
      "path": "/checkout",
      "score": 100,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: path says "checkout"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "src/health.ts",
            "line": 5,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "src/health.ts",
            "line": 5,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "src/health.ts",
      "framework": "hono",
      "handler": {
        "column": 0,
        "line": 5,
      },
      "id": "f52aa661f8a3",
      "kind": "api",
      "method": "GET",
      "path": "/health",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
  ],
  "ruleSetVersion": 1,
  "score": 82,
  "version": 1,
}
`;

exports[`full scan snapshots > next-app-router map snapshot 1`] = `
{
  "cliVersion": "[REDACTED]",
  "framework": "next",
  "generatedAt": "[REDACTED]",
  "projectName": "next-app-router-fixture",
  "routes": [
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "middleware.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "middleware.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "middleware.ts",
      "framework": "next",
      "handler": null,
      "id": "3493f1e8a484",
      "kind": "middleware",
      "method": null,
      "path": "*",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "page-error-handling": {
          "status": "n/a",
        },
      },
      "file": "app/page.tsx",
      "framework": "next",
      "handler": null,
      "id": "cb9f659ac93e",
      "kind": "page",
      "method": null,
      "path": "/",
      "score": 100,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "pass",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "app/api/checkout/route.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 3,
      },
      "id": "bb18fd32686e",
      "kind": "api",
      "method": "POST",
      "path": "/api/checkout",
      "score": 100,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: path says "checkout"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "app/api/error/route.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "evidence": {
            "file": "app/api/error/route.ts",
            "line": 2,
            "snippet": "throw new Error('fail')",
          },
          "message": "throw new Error() — use createError({ why, fix })",
          "status": "fail",
        },
        "wide-event": {
          "evidence": {
            "file": "app/api/error/route.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "app/api/error/route.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "70e08d15062b",
      "kind": "api",
      "method": "GET",
      "path": "/api/error",
      "score": 25,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "app/api/health/route.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "app/api/health/route.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "app/api/health/route.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "e7aac2700a2f",
      "kind": "api",
      "method": "GET",
      "path": "/api/health",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "evidence": {
            "file": "app/api/invoices/route.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "has logger + context but no log.audit() — sensitive route needs audit trail",
          "status": "fail",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "app/api/invoices/route.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 3,
      },
      "id": "fe61445b5a4b",
      "kind": "api",
      "method": "POST",
      "path": "/api/invoices",
      "score": 75,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: path says "invoice"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "evidence": {
            "file": "app/api/payments/route.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "has logger + context but no log.audit() — sensitive route needs audit trail",
          "status": "fail",
        },
        "context": {
          "evidence": {
            "file": "app/api/payments/route.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "evidence": {
            "file": "app/api/payments/route.ts",
            "line": 8,
            "snippet": "catch {}",
          },
          "message": "empty catch block swallows errors",
          "status": "fail",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "app/api/payments/route.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "app/api/payments/route.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 3,
      },
      "id": "da3635a60c3c",
      "kind": "api",
      "method": "POST",
      "path": "/api/payments",
      "score": 5,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: imports stripe",
          "money: path says "payment"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "app/actions/orders.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "app/actions/orders.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "app/actions/orders.ts",
      "framework": "next",
      "handler": {
        "column": 0,
        "line": 3,
      },
      "id": "4c3104a25722",
      "kind": "server-action",
      "method": "POST",
      "path": "action:createOrder",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
  ],
  "ruleSetVersion": 1,
  "score": 52,
  "version": 1,
}
`;

exports[`full scan snapshots > nuxt-basic map snapshot 1`] = `
{
  "cliVersion": "[REDACTED]",
  "framework": "nuxt",
  "generatedAt": "[REDACTED]",
  "projectName": "nuxt-basic-fixture",
  "routes": [
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/middleware/auth.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "server/middleware/auth.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/middleware/auth.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "3b83b97c095f",
      "kind": "middleware",
      "method": null,
      "path": "*",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "page-error-handling": {
          "evidence": {
            "file": "pages/index.vue",
            "line": 2,
            "snippet": undefined,
          },
          "message": "useFetch() without error handling — the page breaks when it fails",
          "status": "fail",
        },
      },
      "file": "pages/index.vue",
      "framework": "nuxt",
      "handler": null,
      "id": "8e327f197322",
      "kind": "page",
      "method": null,
      "path": "/",
      "score": 80,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/api/broken-error.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "evidence": {
            "file": "server/api/broken-error.get.ts",
            "line": 2,
            "snippet": "throw createError({",
          },
          "message": "createError() has why but missing fix",
          "status": "fail",
        },
        "wide-event": {
          "evidence": {
            "file": "server/api/broken-error.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/api/broken-error.get.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "7b70dc859cdb",
      "kind": "api",
      "method": "GET",
      "path": "/api/broken-error",
      "score": 25,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "pass",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "server/api/checkout.post.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "882a5c44fa9c",
      "kind": "api",
      "method": "POST",
      "path": "/api/checkout",
      "score": 100,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: path says "checkout"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/api/docs/[...slug].get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "server/api/docs/[...slug].get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/api/docs/[...slug].get.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "d6834acba846",
      "kind": "api",
      "method": "GET",
      "path": "/api/docs/:slug*",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "pass",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "server/api/orders/[id].get.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "8be26058acc1",
      "kind": "api",
      "method": "GET",
      "path": "/api/orders/:id",
      "score": 100,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {
        "error-catalog": {
          "evidence": {
            "file": "server/api/orders/[id].get.ts",
            "line": 4,
            "snippet": undefined,
          },
          "message": ""404 Not found" is spelled out here and in 1 other file — one catalog entry would cover them",
          "status": "fail",
        },
      },
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "pass",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "server/api/orders/[id].head.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "97bf58435d3d",
      "kind": "api",
      "method": "HEAD",
      "path": "/api/orders/:id",
      "score": 100,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {
        "error-catalog": {
          "evidence": {
            "file": "server/api/orders/[id].head.ts",
            "line": 5,
            "snippet": undefined,
          },
          "message": ""404 Not found" is spelled out here and in 1 other file — one catalog entry would cover them",
          "status": "fail",
        },
      },
    },
    {
      "checks": {
        "audit": {
          "evidence": {
            "file": "server/api/payments/stripe.post.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "has logger + context but no log.audit() — sensitive route needs audit trail",
          "status": "fail",
        },
        "context": {
          "evidence": {
            "file": "server/api/payments/stripe.post.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "evidence": {
            "file": "server/api/payments/stripe.post.ts",
            "line": 8,
            "snippet": "catch {}",
          },
          "message": "empty catch block swallows errors",
          "status": "fail",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "server/api/payments/stripe.post.ts",
            "line": 3,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/api/payments/stripe.post.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 3,
      },
      "id": "b021c8bbd1fd",
      "kind": "api",
      "method": "POST",
      "path": "/api/payments/stripe",
      "score": 5,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: imports stripe",
          "money: path says "payment"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/api/plain-error.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "evidence": {
            "file": "server/api/plain-error.get.ts",
            "line": 2,
            "snippet": "throw new Error('Something went wrong')",
          },
          "message": "throw new Error() — use createError({ why, fix })",
          "status": "fail",
        },
        "wide-event": {
          "evidence": {
            "file": "server/api/plain-error.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/api/plain-error.get.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "c9325024eea6",
      "kind": "api",
      "method": "GET",
      "path": "/api/plain-error",
      "score": 25,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/routes/health.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "server/routes/health.get.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/routes/health.get.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "f91b41cdbbba",
      "kind": "api",
      "method": "GET",
      "path": "/health",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "page-error-handling": {
          "status": "pass",
        },
      },
      "file": "pages/orders/[id].vue",
      "framework": "nuxt",
      "handler": null,
      "id": "5f512212293e",
      "kind": "page",
      "method": null,
      "path": "/orders/:id",
      "score": 100,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "server/tasks/cleanup.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "server/tasks/cleanup.ts",
            "line": 1,
            "snippet": undefined,
          },
          "message": "handler adds nothing to its request event — only method, path and status are recorded",
          "status": "fail",
        },
      },
      "file": "server/tasks/cleanup.ts",
      "framework": "nuxt",
      "handler": {
        "column": 0,
        "line": 1,
      },
      "id": "87339e3cbf66",
      "kind": "cron",
      "method": null,
      "path": "/tasks/cleanup",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
  ],
  "ruleSetVersion": 1,
  "score": 56,
  "version": 1,
}
`;

exports[`full scan snapshots > tanstack-basic map snapshot 1`] = `
{
  "cliVersion": "[REDACTED]",
  "framework": "tanstack-start",
  "generatedAt": "[REDACTED]",
  "projectName": "tanstack-basic-fixture",
  "routes": [
    {
      "checks": {
        "page-error-handling": {
          "status": "n/a",
        },
      },
      "file": "src/routes/index.tsx",
      "framework": "tanstack-start",
      "handler": null,
      "id": "62267fb17cf2",
      "kind": "page",
      "method": null,
      "path": "/",
      "score": 100,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "src/routes/api/admin.ts",
            "line": 6,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "evidence": {
            "file": "src/routes/api/admin.ts",
            "line": 10,
            "snippet": "catch {}",
          },
          "message": "empty catch block swallows errors",
          "status": "fail",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "src/routes/api/admin.ts",
            "line": 6,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "src/routes/api/admin.ts",
      "framework": "tanstack-start",
      "handler": {
        "column": 0,
        "line": 6,
      },
      "id": "b0e38a86e1bb",
      "kind": "api",
      "method": "POST",
      "path": "/api/admin",
      "score": 30,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "pass",
        },
        "context": {
          "status": "pass",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "pass",
        },
        "wide-event": {
          "status": "pass",
        },
      },
      "file": "src/routes/api/checkout.ts",
      "framework": "tanstack-start",
      "handler": {
        "column": 0,
        "line": 9,
      },
      "id": "714cc73bcf15",
      "kind": "api",
      "method": "POST",
      "path": "/api/checkout",
      "score": 100,
      "sensitivity": {
        "level": "high",
        "reasons": [
          "money: path says "checkout"",
        ],
      },
      "suggestions": {},
    },
    {
      "checks": {
        "audit": {
          "status": "n/a",
        },
        "context": {
          "evidence": {
            "file": "src/routes/api/hello.ts",
            "line": 6,
            "snippet": undefined,
          },
          "message": "no log.set() context accumulation",
          "status": "fail",
        },
        "error-handling": {
          "status": "n/a",
        },
        "structured-errors": {
          "status": "n/a",
        },
        "wide-event": {
          "evidence": {
            "file": "src/routes/api/hello.ts",
            "line": 6,
            "snippet": undefined,
          },
          "message": "no useLogger() — handler is a dark event",
          "status": "fail",
        },
      },
      "file": "src/routes/api/hello.ts",
      "framework": "tanstack-start",
      "handler": {
        "column": 0,
        "line": 6,
      },
      "id": "ecca202ae6c2",
      "kind": "api",
      "method": "GET",
      "path": "/api/hello",
      "score": 45,
      "sensitivity": {
        "level": "none",
        "reasons": [],
      },
      "suggestions": {},
    },
  ],
  "ruleSetVersion": 1,
  "score": 69,
  "version": 1,
}
`;
